
* Verilator 3.873 devel

****  Fix installing missing manpages, bug908. [Ahmed El-Mahmoudy]

****  Fix core dump in sync-async warnings, bug911. [Sebastian Dressler]

****  Fix truncation warning with -pins-bv, bug912. [Alfonso Martinez]

****  Fix Cygwin uint32 compile, bug914. [Matthew Barr]

****  Fix preprocessing stringified newline escapes, bug915. [Anton Rapp]


* Verilator 3.872 2015-04-05

***   Add VerilatedVcdFile to allow real-time waveforms, bug890. [HyungKi Jeong]

***   Add --clk and related optimizations, msg1533. [Jie Xu]

***   Fix order of C style arrays. [Duraid Madina]

****  Add --dump-treei-<srcfile>, bug894. [Jie Xu]

****  Fix comma-instantiations with parameters, bug884. [Franck Jullien]

****  Fix SystemC arrayed bit vectors, bug886. [David Poole]

****  Fix compile error on MinGW, bug887. [HyungKi Jeong]


* Verilator 3.870 2015-02-12

****  Suppress COMBDLY when inside always_latch, bug864. [Iztok Jeras]

****  Support cast operator with expression size, bug865. [Iztok Jeras]

****  Add warning on slice selection out of bounds, bug875. [Cong Van Nguyen].

****  Fix member select error broke in 3.868, bug867. [Iztok Jeras]

****  Fix $sccanf from string, bug866. [David Pierce]

****  Fix VM_PARALLEL_BUILDS broke in 3.868, bug870. [Hiroki Honda]

****  Fix non-ANSI modport instantiations, bug868. [Kevin Thompson]

****  Fix UNOPTFLAT change detect on multidim arrays, bug872. [Andrew Bardsley]

****  Fix slice connections of arrays to ports, bug880. [Varun Koyyalagunta]

****  Fix mis-optimizing gate assignments in unopt blocks, bug881. [Mike Thyer]

****  Fix sign extension of pattern members, bug882. [Iztok Jeras]

****  Fix clang compile warnings.


* Verilator 3.868 2014-12-20

**    New verilator_coverage program added to replace SystemPerl's vcoverage.

**    PSL support was removed, please use System Verilog assertions.

**    SystemPerl mode is deprecated and now untested.
