@@ -15,6 +15,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****  Fix preprocessing stringified newline escapes, bug915. [Anton Rapp]
 
+****  Fix part-select in constant function, bug916. [Andrew Bardsley]
+
 
 * Verilator 3.872 2015-04-05
 
